--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -8,10 +8,10 @@
   url: https://iww.org/join
 
 - name: Directory
-  url: #
+  url: https://iww.org/directory
 
 - name: History
-  url: #
+  url: https://iww.org/history
 
 - name: Store
   url: https://store.iww.org
